root/static/scss/author.scss
.author-name {
    display: inline-block;
}

.author-avatar {
    width: 130px;
    height: 130px;
    border-radius: 50%;
    margin-bottom: 5px;
    box-shadow: none;
}

.author-pic {
    margin-bottom: 2px;
    text-align: center;

    span,
    strong {
        display: block;
    }

    img {
        @extend .author-avatar;
    }
}

.author-results {
    float: left;
    width: 100%;

    ul {
        margin: 10px 0;
        padding-left: 0;
    }

    li {
        float: left;
        width: 190px;
        padding: 5px 5px 5px 45px;
        margin-right: 10px;
        border: 1px solid white;
        overflow: hidden;
    }

    img {
        width: 30px;
        height: 30px;
        margin-left: -40px;
        float: left;
        border-radius: 50%;
        margin-bottom: 5px;
        box-shadow: 1px 1px 3px #ccc;
    }

    a {
        display: block;
    }
}

.author-donate {
    text-align: center;
}

.user-profiles {
    margin: 0 0 8px 0;
    text-align: center;

    a {
        text-decoration: none;
        display: inline-block;
        padding: 1px 6px;
    }
}

@include media-breakpoint-down(sm) {
    .author-pic {
        img {
            width: 65px;
            height: 65px;
        }
    }
}

#metacpan_feed_subscription {
    &.page-header {
        margin: 0 0 5px;
        font-weight: bold;
        margin-left: 5px;
    }

    p {
        font-size: 1.3em;
        display: inline;
    }

    a {
        display: inline;
        width: 20px;
        height: 20px;
        padding-right: 20px;
        float: right;
    }

    .fa {
        float: right;
        margin-right: -15px;
    }
}

.author-page-heading {
    margin-top: 0;
}

.table-favorites {
    td,
    th {
        display: table-cell !important;
    }

    td a {
        white-space: nowrap !important;
        overflow: hidden;
        text-overflow: ellipsis;
        display: block;
    }
}

